FEAT: Update ACE - Moved editor down for testing. Will need to move this value to the correct file after merging.

--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -99,8 +99,9 @@ img {
 
 #editor {
   display: none;
+  height: calc(100% - 70px);
   margin: 0;
-  height: calc(100% - 70px); }
+  top: 28px; }
   #editor.active {
     display: block; }
   #editor .ace_search.right {
