--- a/ide-redesign/styles/base.scss
+++ b/ide-redesign/styles/base.scss
@@ -65,63 +65,6 @@ img {
   z-index: 96;
 }
 
-/* Editor window */
-.editor {
-  background: #fff;
-  float: left;
-  height: calc(100% - 92px);
-  left: 0;
-  overflow: auto;
-	position: absolute;
-	top: 0;
-  width: 100%;
-	z-index: 97;
-}
-
-#editor {
-  display: none;
-  height: calc(100% - 70px);
-  margin: 0;
-  top: 28px;
-  &.active {
-    display: block;
-  }
-  .ace_search {
-    &.right {
-      right: 60px;
-      // right: 448px;
-      transition: 0.5s ease-in-out;
-    }
-    &.active {
-      right: 448px;
-    }
-  }
-}
-
-#audio-parent,
-#img-display-parent {
-  display: none;
-  &.active {
-    display: block;
-  }
-}
-
-#pd-svg-parent {
-  background: #f1f1f1;
-  display: none;
-  font-family: monospace;
-  overflow: auto;
-  #pd-svg {
-    background: #f1f1f1;
-    svg {
-      background: #f1f1f1;
-    }
-  }
-  &.active {
-    display: block;
-  }
-}
-
 /* CONTAINER FOR LOWER ELEMENTS */
 
 .activeBar {
@@ -159,6 +102,7 @@ hr {
 @import 'docs';
 @import 'dropdown';
 @import 'dropdown-mini';
+@import 'editor';
 @import 'example-list';
 @import 'file-list';
 @import 'git';
