FEAT: Update Tooltipster - Along with updating the tooltipster library I also debugged a few things and also cleaned up the markup for consistency and legibility and then moved everything into the same folder as much as was sensible to keep the IDE public folder clean

--- a/IDE/public/belaDiagram/css/diagramStyle.css
+++ b/IDE/public/belaDiagram/css/diagramStyle.css
@@ -1,9 +1,17 @@
 @font-face {
     font-family: 'inconsolata';
-    src: url('fonts/inconsolata-webfont.woff2') format('woff2'),
-         url('fonts/inconsolata-webfont.woff') format('woff');
+    src: url('/fonts/inconsolata-webfont.woff2') format('woff2'),
+         url('/fonts/inconsolata-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+}
+
+@font-face {
+  font-family: 'poppins_regular';
+  src: url("/fonts/poppins-regular-webfont.woff2") format("woff2"),
+       url("/fonts/poppins-regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 #container {
@@ -19,9 +27,10 @@
 }
 
 .diagram-text {
-    font-family: 'inconsolata';
-    font-size: 12px;
-    line-height: 22px;
+  font-family: 'poppins_regular';
+  font-size: .9em;
+  line-height: 22px;
+  margin-top: -10px;
 }
 
 .dPin {
@@ -115,10 +124,4 @@
     padding: 5px 10px;
     position: relative;
     z-index: 100;
-}
-
-.diagram-text {   
-    font-size: .9em;
-    font-family: poppins;
-    margin-top: -10px;
 }
