--- a/ide-redesign/styles/_pins.scss
+++ b/ide-redesign/styles/_pins.scss
@@ -14,10 +14,11 @@
     width: auto;
   }
 
-  .diagram_text {
-    font-family: poppins_light;
-    font-size: inherit;
-    line-height: 12px;
+  .diagram-text {
+    font-family: 'poppins_regular';
+    font-size: .9em;
+    line-height: 22px;
+    margin-top: 0;
   }
 
   .dPin {
