--- a/IDE/public/belaDiagram/css/diagramStyle.css
+++ b/IDE/public/belaDiagram/css/diagramStyle.css
@@ -1,29 +1,29 @@
 @font-face {
-    font-family: 'inconsolata';
-    src: url('/fonts/inconsolata-webfont.woff2') format('woff2'),
-         url('/fonts/inconsolata-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'inconsolata';
+  font-style: normal;
+  font-weight: normal;
+  src: url('/fonts/inconsolata-webfont.woff2') format('woff2'),
+       url('/fonts/inconsolata-webfont.woff') format('woff');
 }
 
 @font-face {
   font-family: 'poppins_regular';
+  font-style: normal;
+  font-weight: normal;
   src: url("/fonts/poppins-regular-webfont.woff2") format("woff2"),
        url("/fonts/poppins-regular-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
 }
 
 #container {
-    overflow: visible;
+  overflow: hidden;
 }
 
 #image {
-    margin: 0;
-    overflow: visible;
-    padding-left: 0;
-    text-align: left;
-    width: 350px;
+  margin: 0;
+  overflow: visible;
+  padding-left: 0;
+  text-align: left;
+  width: 350px;
 }
 
 .diagram-text {
@@ -34,94 +34,94 @@
 }
 
 .dPin {
-    fill: rgba(0, 255, 0, 0.5);
-    stroke: none;
+  fill: rgba(0, 255, 0, 0.5);
+  stroke: none;
 }
 
 .new {
-    fill: rgb(255, 0, 0);
+  fill: rgb(255, 0, 0);
 }
 
 .gnd {
-    fill: rgba(255, 0, 0, 0.4);
-    stroke: rgb(255, 0, 0);
+  fill: rgba(255, 0, 0, 0.4);
+  stroke: rgb(255, 0, 0);
 }
 
 .aPin {
-    fill: rgba(255, 255, 0, 0.5);
-    stroke: none;
+  fill: rgba(255, 255, 0, 0.5);
+  stroke: none;
 }
 
 .aInPin {
-    fill: rgba(255, 165, 0, 0.6);
-    stroke: none;
+  fill: rgba(255, 165, 0, 0.6);
+  stroke: none;
 }
 
 .comms {
-    fill: rgba(0, 0, 255, 0.5);
-    stroke: none;
+  fill: rgba(0, 0, 255, 0.5);
+  stroke: none;
 }
 
 .audio {
-    fill: rgba(155, 48, 255, 0.5);
-    stroke: none;
+  fill: rgba(155, 48, 255, 0.5);
+  stroke: none;
 }
 
 .pins{
-    fill: transparent;
-    stroke: #000;
+  fill: transparent;
+  stroke: #000;
 }
 
 .util {
-    fill: rgba(255, 14, 154, 0.5);
-    stroke: none;
+  fill: rgba(255, 14, 154, 0.5);
+  stroke: none;
 }
 
 .led {
-    fill: rgba(0, 255, 0, 0.6);
-    stroke: none;
+  fill: rgba(0, 255, 0, 0.6);
+  stroke: none;
 }
 
 .caution {
-    fill: rgba(255, 14, 154, 0.7);
-    stroke: rgb(255, 0, 0);
+  fill: rgba(255, 14, 154, 0.7);
+  stroke: rgb(255, 0, 0);
 }
 
 .jumper {
-    fill: rgba(0, 255, 255, 0.2);
-    stroke: rgb(0, 255, 255);
+  fill: rgba(0, 255, 255, 0.2);
+  stroke: rgb(0, 255, 255);
 }
 
 .usbpwrJ {
-    fill: rgba(255, 150, 0, 0.5);
-    stroke: rgb(255, 150, 0);
+  fill: rgba(255, 150, 0, 0.5);
+  stroke: rgb(255, 150, 0);
 }
 
 .extpwrJ {
-    fill: transparent;
-    stroke: rgb(255, 255, 0);
+  fill: transparent;
+  stroke: rgb(255, 255, 0);
 }
 
 .disabled {
-    fill: rgba(0, 0, 0, 0.6);
-    stroke: none;
+  fill: rgba(0, 0, 0, 0.6);
+  stroke: none;
 }
 
 .powerIn {
-    fill: rgba(255, 14, 154, 0.7);
-    stroke: #0effeb;
+  fill: rgba(255, 14, 154, 0.7);
+  stroke: #0effeb;
 }
 
 .tooltipster-content {
-    padding: 0!important;
+  padding: 0!important;
 }
 
 .tipText {
-    background: #fff;
-    color: #000;
-    font-family: "inconsolata";
-    max-width: 350px;
-    padding: 5px 10px;
-    position: relative;
-    z-index: 100;
+  background: #fff;
+  color: #000;
+  font-family: "inconsolata";
+  max-width: 350px;
+  padding: 5px 10px;
+  position: relative;
+  z-index: 100;
 }
