Added an extra light grey variable

--- a/ide-redesign/styles/base.scss
+++ b/ide-redesign/styles/base.scss
@@ -14,6 +14,7 @@ $teal-01: #1ce8b5; //rgb(28,232,81)
 $teal-02: #63ffd9;
 $teal-03: #a6ffea;
 
+$grey-extra-light: #fafafa;
 $grey-light: #f1f1f1;
 $grey-light-mid: #e5e5e5;
 $grey-mid: #bdbdbd;
