Computed styles and bundle file

--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -819,6 +819,53 @@ ul.libraries-list-parent {
   list-style: none;
   margin: 0;
   padding: 0; }
+  ul.libraries-list-parent .library-desc > p {
+    font-family: poppins-light;
+    font-size: 14px;
+    -webkit-margin-before: 0;
+            margin-block-start: 0;
+    -webkit-margin-after: .5em;
+            margin-block-end: .5em; }
+  ul.libraries-list-parent pre {
+    background: #fafafa;
+    corner-radius: 3px;
+    font-family: inconsolata;
+    font-size: .9em;
+    margin: .5em;
+    padding: .1em 0;
+    white-space: nowrap; }
+  ul.libraries-list-parent .include-copy {
+    position: absoute;
+    top: 0;
+    right: 0; }
+  ul.libraries-list-parent .include-container {
+    position: relative; }
+  ul.libraries-list-parent .include-lines {
+    background: #fafafa;
+    border: 1px solid #c9c9c9;
+    border-radius: .25em;
+    margin: .5em 0 1em;
+    overflow-x: hidden;
+    width: 96%; }
+  ul.libraries-list-parent .include-copy {
+    background-color: #c9c9c9;
+    background-image: url(../images/icons/copy_inactive.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 60%;
+    border: 1px solid #c9c9c9;
+    border-radius: 0 .25em .25em 0;
+    height: 34px;
+    position: absolute;
+    right: 10px;
+    top: 0;
+    width: 40px; }
+    ul.libraries-list-parent .include-copy:hover {
+      background-color: #1ce8b5; }
+  ul.libraries-list-parent .lib-info-content {
+    margin: 1em 0 1em; }
+    ul.libraries-list-parent .lib-info-content > p {
+      margin: 0; }
   ul.libraries-list-parent .libraries-list li {
     color: rgba(0, 0, 0, 0.8);
     cursor: pointer;
@@ -837,7 +884,7 @@ ul.libraries-list-parent {
     border-bottom: 1px solid #bdbdbd;
     font-family: poppins_regular;
     margin: 0;
-    padding: 3px 0 3px 10px;
+    padding: 3px 0 3px;
     width: calc(100% - 10px); }
 
 ul .copy {
