--- a/ide-redesign/styles/_popup.scss
+++ b/ide-redesign/styles/_popup.scss
@@ -6,7 +6,8 @@
   margin-bottom: 10px;
   max-height: 60vh;
   min-height: 100px;
-  overflow-y: auto;
+  max-height: 500px;
+  overflow: hidden;
 	padding: 4em;
   position: absolute;
   top: calc((100% / 2) - 300px);
@@ -14,6 +15,12 @@
   &.active {
     display: inline;
     z-index: 9999;
+  }
+  #popup-content {
+    pre {
+      max-height: 300px;
+      overflow: auto;
+    }
   }
   h1 {
     color: $teal-main;
