FEAT: Update Tooltipster - Added support for arrows

--- a/IDE/public/belaDiagram/css/diagramStyle.css
+++ b/IDE/public/belaDiagram/css/diagramStyle.css
@@ -125,3 +125,10 @@
   position: relative;
   z-index: 100;
 }
+
+.tooltipster-base.tooltipster-bottom .tooltipster-arrow .tooltipster-arrow-background {
+  border-bottom-color: #fff;
+}
+.tooltipster-base.tooltipster-top .tooltipster-arrow .tooltipster-arrow-background {
+  border-top-color: #fff;
+}
