--- a/ide-redesign/styles/_dropdown-mini.scss
+++ b/ide-redesign/styles/_dropdown-mini.scss
@@ -1,7 +1,7 @@
 .mini-dropdown select {
   border: transparent;
   height: 25px;
-  width: 105px;
+  width: 100%;
   padding-left: 10px;
   background: transparent;
   font-family: poppins_light;
