--- a/ide-redesign/styles/_tab-menu.scss
+++ b/ide-redesign/styles/_tab-menu.scss
@@ -25,93 +25,57 @@
       }
     }
     &.explorer {
-      background-image: url('../images/icons/folder_inactive.svg');
-      background-position: center;
-      background-repeat: no-repeat;
+      background: url('../images/icons/folder_inactive.svg') no-repeat center;
       &:hover {
-        background-image: url('../images/icons/folder_active.svg');
-        background-position: center;
-        background-repeat: no-repeat;
+        background: url('../images/icons/folder_active.svg') no-repeat center;
       }
       &.active{
-        background-image: url('../images/icons/folder_active.svg');
-        background-position: center;
-        background-repeat: no-repeat;
+        background: $white url('../images/icons/folder_active.svg') no-repeat center;
       }
     }
     &.examples {
-      background-image: url('../images/icons/examples_inactive.svg');
-      background-position: center;
-      background-repeat: no-repeat;
+      background: url('../images/icons/examples_inactive.svg') no-repeat center;
         &:hover {
-          background-image: url('../images/icons/examples_active.svg');
-          background-position: center;
-          background-repeat: no-repeat;
+          background: url('../images/icons/examples_active.svg') no-repeat center;
         }
         &.active {
-          background-image: url('../images/icons/examples_active.svg');
-          background-position: center;
-          background-repeat: no-repeat;
+          background: $white url('../images/icons/examples_active.svg') no-repeat center;
         }
       }
       &.settings {
-        background-image: url('../images/icons/settings_inactive.svg');
-        background-repeat: no-repeat;
-        background-position: center;
+        background: url('../images/icons/settings_inactive.svg') no-repeat center;
       &:hover {
-        background-image: url('../images/icons/settings_active.svg');
-        background-position: center;
-        background-repeat: no-repeat;
+        background: url('../images/icons/settings_active.svg') no-repeat center;
       }
       &.active {
-        background-image: url('../images/icons/settings_active.svg');
-        background-position: center;
-        background-repeat: no-repeat;
+        background: $white url('../images/icons/settings_active.svg') no-repeat center;
       }
     }
     &.pins {
-      background-image: url('../images/icons/pins_inactive.svg');
-      background-position: center;
-      background-repeat: no-repeat;
+      background: url('../images/icons/pins_inactive.svg') no-repeat center;
     &:hover {
-      background-image: url('../images/icons/pins_active.svg');
-      background-position: center;
-      background-repeat: no-repeat;
+      background: url('../images/icons/pins_active.svg') no-repeat center;
     }
     &.active {
-      background-image: url('../images/icons/pins_active.svg');
-      background-position: center;
-      background-repeat: no-repeat;
+      background: $white url('../images/icons/pins_active.svg') no-repeat center;
     }
   }
   &.refs {
-    background-image: url('../images/icons/refs_inactive.svg');
-    background-position: center;
-    background-repeat: no-repeat;
+    background: url('../images/icons/refs_inactive.svg') no-repeat center;
     &:hover {
-      background-image: url('../images/icons/refs_active.svg');
-      background-position: center;
-      background-repeat: no-repeat;
+      background: url('../images/icons/refs_active.svg') no-repeat center;
     }
     &.active {
-      background-image: url('../images/icons/refs_active.svg');
-      background-position: center;
-      background-repeat: no-repeat;
+      background: $white url('../images/icons/refs_active.svg') no-repeat center;
     }
   }
   &.libraries {
-    background-image: url('../images/icons/library_white.svg');
-    background-position: center;
-    background-repeat: no-repeat;
+    background: url('../images/icons/library_white.svg') no-repeat center;
     &:hover {
-      background-image: url('../images/icons/library_green.svg');
-      background-position: center;
-      background-repeat: no-repeat;
+      background: url('../images/icons/library_green.svg') no-repeat center;
     }
     &.active {
-      background-image: url('../images/icons/library_green.svg');
-      background-position: center;
-      background-repeat: no-repeat;
+      background: $white url('../images/icons/library_green.svg') no-repeat center;
     }
   }
   &.active {
