--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -124,7 +124,7 @@ button.accordion {
   text-align: left;
   -webkit-transition: 0.25s ease-in-out;
   transition: 0.25s ease-in-out;
-  width: calc(100% - 12px); }
+  width: 100%; }
   button.accordion:hover {
     background: #bdbdbd;
     border-bottom: 2px solid #00bea4; }
@@ -151,19 +151,35 @@ button.accordion-sub {
   border-top: 0;
   border-left: 0;
   border-right: 0;
-  border-bottom: 1px dashed rgba(0, 0, 0, 0.8);
+  border-radius: 0;
   color: rgba(0, 0, 0, 0.8);
   font-size: 1em;
-  padding: .5em 0 .5em .8em;
+  font-family: 'poppins_regular';
+  padding: .5em .8em;
   text-align: left;
   width: 100%; }
   button.accordion-sub:hover {
-    background: #FFFFC9;
+    background: rgba(28, 232, 181, 0.25);
     color: rgba(0, 0, 0, 0.8); }
   button.accordion-sub.active {
+    background: rgba(28, 232, 181, 0.15);
+    border-bottom: 1px solid #009587;
     color: rgba(0, 0, 0, 0.8); }
     button.accordion-sub.active:hover {
       color: rgba(0, 0, 0, 0.8); }
+    button.accordion-sub.active:after {
+      content: "\2796";
+      /* Unicode character for "minus" sign (-) */
+      font-size: .75em;
+      margin-top: 4px; }
+  button.accordion-sub:after {
+    color: rgba(0, 0, 0, 0.4);
+    content: '\02795';
+    /* Unicode character for "plus" sign (+) */
+    float: right;
+    font-size: .75em;
+    margin-left: 5px;
+    margin-top: 4px; }
 
 .docs-content {
   max-height: 0;
@@ -840,7 +856,7 @@ ul.libraries-list-parent {
     position: relative; }
     ul.libraries-list-parent .include-container > p {
       font-family: inconsolata;
-      font-size: .75em;
+      font-size: .72em;
       -webkit-margin-before: 0;
               margin-block-start: 0; }
   ul.libraries-list-parent .include-lines {
@@ -861,7 +877,7 @@ ul.libraries-list-parent {
     height: 34px;
     position: absolute;
     right: 10px;
-    top: 0;
+    top: 7px;
     width: 40px; }
     ul.libraries-list-parent .include-copy:hover {
       background-color: #1ce8b5; }
