Adjusted font for listed files (everything coming from the board should be in inconsolata)

--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -770,6 +770,7 @@ ul {
 .source-file .source-data-container {
   position: relative; }
   .source-file .source-data-container > .source-text {
+    font-family: inconsolata;
     display: inline; }
   .source-file .source-data-container > button {
     border: 0;
