--- a/ide-redesign/styles/_file-list.scss
+++ b/ide-redesign/styles/_file-list.scss
@@ -25,6 +25,7 @@ ul {
   .source-data-container {
     position: relative;
     > .source-text {
+      font-family: inconsolata;
       display: inline;
     }
     > button {
