--- a/ide-redesign/styles/_dropdown.scss
+++ b/ide-redesign/styles/_dropdown.scss
@@ -118,6 +118,9 @@ select.dropdown-num {
     padding-left: 28px;
     padding-top: 0;
     width: 200px;
+    li {
+      user-select: none;
+    }
     > li, span, a {
       color: black;
       cursor: pointer;
