--- a/ide-redesign/styles/_library-list.scss
+++ b/ide-redesign/styles/_library-list.scss
@@ -4,7 +4,7 @@ ul {
     margin: 0;
     padding: 0;
     .library-desc, .library-ver {
-      font-family: 'poppins-light';
+      font-family: 'poppins_light';
       font-size: .9em;
       margin-block-start: 0;
       margin-block-end: .5em;
