FIX: Console Escape Warning HTML Entities - Extra class to allow the console to collapse correctly

--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -333,6 +333,7 @@ input[type="range"].range-slider {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   display: inline-block;
+  position: relative;
   min-width: 100%; }
 
 .beaglert-console-log-in {
